# HardwareMatrixDecomp

./: .gitignore  CLAUDE.md  HARDWARE_SPEC.md  README.md  TIER2_BUILD_GUIDE.md  pyproject.toml
dsp/: __init__.py  delay_line.py  filter.py  transform.py
dsp/tests/: test_delay_line.py  test_filter.py  test_transform.py
memristor/: __init__.py  delay_cell.py  energy.py  gradient_analysis.py  hil_training.py  mnist.py  network.py  noise.py  programming.py  quantization.py  training.py
memristor/tests/: test_complementary.py  test_delay_cell.py  test_energy.py  test_gradient_analysis.py  test_hil_training.py  test_mnist.py  test_network.py  test_noise.py  test_programming.py  test_quantization.py  test_tier2_delay_cell.py  test_tier2_device.py  test_tier2_network.py  test_tier2_sense_amp.py  test_training.py
memristor/tier2/: __init__.py  delay_cell.py  device.py  network.py  sense_amp.py
scripts/: hardware_cost.py  per_layer_error.py  plot_results.py  run_cnn_sweep.py  run_sweep.py  sim2_quantization.py  sim3_noise.py  sim4_programming.py  sim_delay_gradients.py  sim_energy.py  sim_hil_training.py  sim_tier2.py  spice_xor.py  train_cnn.py  train_mlp.py  train_mnist.py  train_mnist_hil.py  train_xor.py
src/hardware_matrix_decomp/: __init__.py  analysis.py  decomp.py  error_model.py  network.py  pipeline.py  simulator.py  tile.py  tile_grid.py  transport.py
tests/: test_analysis.py  test_conv.py  test_decomp.py  test_error_model.py  test_network.py  test_pipeline.py  test_simulator.py  test_tile.py  test_tile_grid.py  test_transport.py
(+2 files in other folders)
